--- a/rtm-contacts/contacts.html
+++ b/rtm-contacts/contacts.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../rtm-asic/styles/normalize.css">
-    <link rel="stylesheet" href="../rtm-asic/styles/asic.css">
-    <title>RTM Offer</title>
+    <link rel="stylesheet" href="../rtm-contacts/styles/normalize.css">
+    <link rel="stylesheet" href="../rtm-contacts/styles/contacts.css">
+    <title>Contacts</title>
 </head>
 <body class="body-main">
 <div id="main-menu" class="main__menu">
@@ -43,10 +43,10 @@
     </div>
 </div>
 <div class="main__container">
-    <header class="rtm__asic-header">
-        <nav class="rtm__asic-navbar">
-            <div class="rtm__asic-menu-wrapper">
-                <div id="menu-button" class="rtm__asic-menu-mobile">
+    <header class="rtm__contacts-header">
+        <nav class="rtm__contacts-navbar">
+            <div class="rtm__contacts-menu-wrapper">
+                <div id="menu-button" class="rtm__contacts-menu-mobile">
                     <svg width="29" height="12" viewBox="0 0 29 12" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1H27.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"/>
                         <path d="M1 6H27.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"/>
@@ -54,47 +54,57 @@
                     </svg>
                     Menu
                 </div>
-                <a href="../../rtm-offer/index.html" class="rtm__asic-menu-logo">ReadyToMine</a>
-                <div class="rtm__asic-menu-language-selector-wrapper">
-                    <a href="" class="rtm__asic-menu-language-selector rtm__asic-menu-language-selector--active">En</a>
-                    <a href="" class="rtm__asic-menu-language-selector">Ru</a>
+                <a href="../../rtm-offer/index.html" class="rtm__contacts-menu-logo">ReadyToMine</a>
+                <div class="rtm__contacts-menu-language-selector-wrapper">
+                    <a href="" class="rtm__contacts-menu-language-selector rtm__contacts-menu-language-selector--active">En</a>
+                    <a href="" class="rtm__contacts-menu-language-selector">Ru</a>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <div class="slider js-slider">
-            <div class="slide slide-1 active">
-                <div class="rtm__asic-content-wrapper">
-                    <div class="rtm__asic-progress-wrapper">
-                        <p class="rtm__asic-progress-title">25% complete</p>
-                        <progress max="100" value="25" class="rtm__asic-progress-bar"></progress>
-                    </div>
-                    <div class="rtm__asic-asic-wrapper">
-                        <p class="rtm__asic-asic-title">Enter the ASIC quantity</p>
-                    </div>
-                    <div class="rtm__asic-asic-content">
-                        <button class="rtm__asic-asic-content-button">
-                <span class="rtm__asic-asic-content-button-text">
-                    —
-                </span>
-                        </button>
-                        <div class="rtm__asic-asic-content-value">10</div>
-                        <button class="rtm__asic-asic-content-button">
-                <span class="rtm__asic-asic-content-button-text">
-                    +
-                </span>
-                        </button>
-                    </div>
+    <div class="rtm__contacts-content-wrapper">
+        <div class="rtm__contacts-header">
+            <p class="rtm__contacts-title">ReadyToMine</p>
+            <p class="rtm__contacts-subtitle">Contact.</p>
+            <hr class="rtm__contacts-separator">
+        </div>
+        <div class="rtm__contacts-image">
+            <img src="../rtm-contacts/assets/contacts-image.svg" alt="contacts image">
+        </div>
+        <div class="rtm__contacts-info-wrapper">
+            <div class="rtm__contacts-info">
+                <p class="rtm__contacts-info-title">Get in touch.</p>
+                <div class="rtm__contacts-info-text-group">
+                    <p class="rtm__contacts-info-text-item">Do you have any suggestions, questions or complaints? </p>
+                    <p class="rtm__contacts-info-text-item">Please contact us by any convenient way. Thank you!</p>
                 </div>
-                <div class="rtm__asic-buttons">
-                    <a href="../rtm-algorithm-coin/algorithm-coin.html" class="rtm__asic-button rtm__asic-button--left">
-                        <img src="../rtm-asic/assets/button-arrow-left.svg" alt="arrow left">
-                    </a>
-                    <a href="../rtm-electricity/electricity.html" class="rtm__asic-button rtm__asic-button--right">
-                        <img src="../rtm-asic/assets/button-arrow-right.svg" alt="arrow right">
-                    </a>
+                <div class="rtm__contacts-info-text-group">
+                    <p class="rtm__contacts-info-text-item">Our contact details:</p>
+                    <p class="rtm__contacts-info-text-item">Call us at  +7 925 558 4447</p>
+                    <p class="rtm__contacts-info-text-item">
+                        Our email is
+                    </p>
+                    <p class="rtm__contacts-info-text-item">sales@readytomine.com or info@readytomine.com</p>
                 </div>
+            </div>
+        </div>
+        <div class="rtm__contacts-socials-wrapper">
+            <div class="rtm__contacts-socials">
+                <a href="" target="_blank" class="rtm__contacts-socials-item">
+                    <img src="../rtm-contacts/assets/telegram-icon.svg" alt="telegram icon" class="rtm__contacts-socials-item-icon">
+                </a>
+                <a href="" target="_blank" class="rtm__contacts-socials-item">
+                    <img src="../rtm-contacts/assets/whatsapp-icon.svg" alt="whatsapp icon" class="rtm__contacts-socials-item-icon">
+                </a>
+                <a href="" target="_blank" class="rtm__contacts-socials-item">
+                    <img src="../rtm-contacts/assets/linkedin-icon.svg" alt="linkedin icon" class="rtm__contacts-socials-item-icon">
+                </a>
+                <a href="" target="_blank" class="rtm__contacts-socials-item">
+                    <img src="../rtm-contacts/assets/instagram-icon.svg" alt="instagram icon" class="rtm__contacts-socials-item-icon">
+                </a>
+                <a href="" target="_blank" class="rtm__contacts-socials-item">
+                    <img src="../rtm-contacts/assets/youtube-icon.svg" alt="youtube icon" class="rtm__contacts-socials-item-icon">
+                </a>
             </div>
         </div>
     </div>
@@ -115,6 +125,7 @@
         menu.classList.remove('main__menu--active')
         document.body.classList.remove('menu-active')
     });
+
 </script>
 </body>
 </html>
