--- a/rtm-offer-page/offer.html
+++ b/rtm-offer-page/offer.html
@@ -12,6 +12,7 @@
     <title>RTM Offer</title>
 </head>
 <body class="body-offer">
+
 <div id="page-offer-menu" class="page-offer__menu">
     <div class="page-offer__menu-content">
         <div id="menu-close-btn" class="page-offer__menu-content-close-btn-wrapper">
@@ -23,7 +24,7 @@
             </div>
         </div>
         <div class="page-offer__menu-content-list">
-            <a href="" class="page-offer__menu-content-list-item">
+            <a href="../../rtm-offer/rtm-price-list/price-list.html" class="page-offer__menu-content-list-item">
                 Price list
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
@@ -35,7 +36,7 @@
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
-            <a href="" class="page-offer__menu-content-list-item">
+            <a href="../../rtm-offer/rtm-contacts/contacts.html" class="page-offer__menu-content-list-item">
                 Contacts
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
@@ -56,7 +57,7 @@
                     </svg>
                     Menu
                 </div>
-                <a href="" class="rtm__offer-menu-logo">ReadyToMine</a>
+                <a href="../../rtm-offer/index.html" class="rtm__offer-menu-logo">ReadyToMine</a>
                 <div class="rtm__offer-menu-language-selector-wrapper">
                     <a href="" class="rtm__offer-menu-language-selector rtm__offer-menu-language-selector--active">En</a>
                     <a href="" class="rtm__offer-menu-language-selector">Ru</a>
