--- a/rtm-algorithm-coin/algorithm-coin.html
+++ b/rtm-algorithm-coin/algorithm-coin.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="main__menu-content-list">
-            <a href="" class="main__menu-content-list-item">
+            <a href="../../rtm-offer/rtm-price-list/price-list.html" class="main__menu-content-list-item">
                 Price list
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
@@ -33,7 +33,7 @@
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
-            <a href="" class="main__menu-content-list-item">
+            <a href="../../rtm-offer/rtm-contacts/contacts.html" class="main__menu-content-list-item">
                 Contacts
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
@@ -54,7 +54,7 @@
                     </svg>
                     Menu
                 </div>
-                <a href="" class="rtm__algorithm-coin-menu-logo">ReadyToMine</a>
+                <a href="../../rtm-offer/index.html" class="rtm__algorithm-coin-menu-logo">ReadyToMine</a>
                 <div class="rtm__algorithm-coin-menu-language-selector-wrapper">
                     <a href="" class="rtm__algorithm-coin-menu-language-selector rtm__algorithm-coin-menu-language-selector--active">En</a>
                     <a href="" class="rtm__algorithm-coin-menu-language-selector">Ru</a>
