--- a/index.html
+++ b/index.html
@@ -12,14 +12,6 @@
 <body class="body-main">
 <div id="main-menu" class="main__menu">
     <div class="main__menu-content">
-        <div id="menu-close-btn" class="main__menu-content-close-btn-wrapper">
-            <div class="main__menu-content-close-btn-image">
-                <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.646484L20.799 20.4455" stroke="currentColor" stroke-linecap="round"/>
-                    <path d="M1 21.1523L20.799 1.35335" stroke="currentColor" stroke-linecap="round"/>
-                </svg>
-            </div>
-        </div>
         <div class="main__menu-content-list">
             <a href="../rtm-offer/rtm-price-list/price-list.html" class="main__menu-content-list-item">
                 Price list
@@ -27,7 +19,7 @@
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
-            <a href="" class="main__menu-content-list-item">
+            <a href="../rtm-offer/rtm-bonus/bonus.html" class="main__menu-content-list-item">
                 Bonus programme
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
@@ -39,6 +31,42 @@
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
+        </div>
+    </div>
+    <div class="main__menu-price-list">
+        <div class="main__menu-price-list-wrapper">
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+        </div>
+    </div>
+    <div id="menu-close-btn" class="main__menu-content-close-btn-wrapper">
+        <div class="main__menu-content-close-btn-image">
+            <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 0.646484L20.799 20.4455" stroke="currentColor" stroke-linecap="round"/>
+                <path d="M1 21.1523L20.799 1.35335" stroke="currentColor" stroke-linecap="round"/>
+            </svg>
         </div>
     </div>
 </div>
