--- a/rtm-asic/asic.html
+++ b/rtm-asic/asic.html
@@ -27,7 +27,7 @@
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
-            <a href="" class="main__menu-content-list-item">
+            <a href="../rtm-bonus/bonus.html" class="main__menu-content-list-item">
                 Bonus programme
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
