--- a/menu/menu.html
+++ b/menu/menu.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../menu/menu.css">
     <title>Menu</title>
+    <link rel="stylesheet" href="">
 </head>
 <body>
 <div id="main-menu" class="main__menu">
@@ -33,39 +34,39 @@
         </div>
     </div>
     <div class="main__menu-price-list">
-        <div id="menu-close-btn" class="main__menu-content-close-btn-wrapper">
-            <div class="main__menu-content-close-btn-image">
-                <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.646484L20.799 20.4455" stroke="currentColor" stroke-linecap="round"/>
-                    <path d="M1 21.1523L20.799 1.35335" stroke="currentColor" stroke-linecap="round"/>
-                </svg>
-            </div>
-        </div>
         <div class="main__menu-price-list-wrapper">
-            <a class="main__menu-price-list-item">
+            <a href="" class="main__menu-price-list-item">
                 <div class="main__menu-price-list-item-image">
                     <img src="../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
                 </div>
                 <p class="main__menu-price-list-item-text">M30S</p>
             </a>
-            <a class="main__menu-price-list-item">
+            <a href="" class="main__menu-price-list-item">
                 <div class="main__menu-price-list-item-image">
                     <img src="../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
                 </div>
                 <p class="main__menu-price-list-item-text">M30S</p>
             </a>
-            <a class="main__menu-price-list-item">
+            <a href="" class="main__menu-price-list-item">
                 <div class="main__menu-price-list-item-image">
                     <img src="../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
                 </div>
                 <p class="main__menu-price-list-item-text">M30S</p>
             </a>
-            <a class="main__menu-price-list-item">
+            <a href="" class="main__menu-price-list-item">
                 <div class="main__menu-price-list-item-image">
                     <img src="../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
                 </div>
                 <p class="main__menu-price-list-item-text">M30S</p>
             </a>
+        </div>
+    </div>
+    <div id="menu-close-btn" class="main__menu-content-close-btn-wrapper">
+        <div class="main__menu-content-close-btn-image">
+            <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 0.646484L20.799 20.4455" stroke="currentColor" stroke-linecap="round"/>
+                <path d="M1 21.1523L20.799 1.35335" stroke="currentColor" stroke-linecap="round"/>
+            </svg>
         </div>
     </div>
 </div>
