--- a/rtm-bonus/bonus.html
+++ b/rtm-bonus/bonus.html
@@ -10,39 +10,7 @@
     <title>Bonus programme</title>
 </head>
 <body class="body-main">
-<div id="main-menu" class="main__menu">
-    <div class="main__menu-content">
-        <div id="menu-close-btn" class="main__menu-content-close-btn-wrapper">
-            <div class="main__menu-content-close-btn-image">
-                <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.646484L20.799 20.4455" stroke="currentColor" stroke-linecap="round"/>
-                    <path d="M1 21.1523L20.799 1.35335" stroke="currentColor" stroke-linecap="round"/>
-                </svg>
-            </div>
-        </div>
-        <div class="main__menu-content-list">
-            <a href="../../rtm-offer/rtm-price-list/price-list.html" class="main__menu-content-list-item">
-                Price list
-                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
-                    <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
-            <a href="../rtm-bonus/bonus.html" class="main__menu-content-list-item">
-                Bonus programme
-                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
-                    <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
-            <a href="../../rtm-offer/rtm-bonus/bonus.html" class="main__menu-content-list-item">
-                Contacts
-                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
-                    <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
-        </div>
-    </div>
-</div>
-<div class="main__container">
+<div class="bonus__container">
     <header class="rtm__bonus-menu-header">
         <nav class="rtm__bonus-menu-navbar">
             <div class="rtm__bonus-menu-wrapper">
@@ -111,8 +79,8 @@
         </div>
     </div>
 </div>
-<footer class="main__footer">
-    <p class="main__footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
+<footer class="bonus__footer">
+    <p class="bonus__footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
 </footer>
 <script>
     const menu = document.querySelector('#main-menu');
