diagram new fixed

--- a/rtm-offer-page/offer.html
+++ b/rtm-offer-page/offer.html
@@ -133,6 +133,16 @@
                             </div>
                             <div class="rtm__offer-blocks-item rtm__offer-blocks-item--diagram">
                                 <canvas id="donutChart"></canvas>
+                                <div class="rtm__offer-blocks-legend-wrapper">
+                                    <div class="rtm__offer-blocks-legend-item">
+                                        <div class="rtm__offer-blocks-legend-item-percentage rtm__offer-blocks-legend-item-percentage--income">63.0 <span>%</span></div>
+                                        <div class="rtm__offer-blocks-legend-item-text">income</div>
+                                    </div>
+                                    <div class="rtm__offer-blocks-legend-item">
+                                        <div class="rtm__offer-blocks-legend-item-percentage rtm__offer-blocks-legend-item-percentage--costs">37.0 <span>%</span></div>
+                                        <div class="rtm__offer-blocks-legend-item-text">electricity costs</div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="rtm__offer-blocks-item rtm__offer-blocks-item--payback">
