form fields fixed

--- a/rtm-offer-page/offer.html
+++ b/rtm-offer-page/offer.html
@@ -132,7 +132,7 @@
                                 </div>
                             </div>
                             <div class="rtm__offer-blocks-item rtm__offer-blocks-item--diagram">
-                                <canvas id="donutChart"></canvas>
+                                <canvas width="215px" height="215px" id="donutChart"></canvas>
                                 <div class="rtm__offer-blocks-legend-wrapper">
                                     <div class="rtm__offer-blocks-legend-item">
                                         <div class="rtm__offer-blocks-legend-item-percentage rtm__offer-blocks-legend-item-percentage--income">63.0 <span>%</span></div>
